fix: reduce projects title margin to prevent scroll jump

--- a/src/styles/proyectos.module.css
+++ b/src/styles/proyectos.module.css
@@ -2,7 +2,7 @@
     color: var(--color-secundario);
     font-weight: 700;
     text-transform: uppercase;
-    margin: 10rem 0 5rem 0;
+    margin: 4rem 0 5rem 0;
     padding-left: 2rem;
 }
 
